--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -1,6 +1,6 @@
 body {
     background-color: #f8f9fa;
-    margin: 10px; /* Add margin to the body for the entire page */
+    margin: 10px;
 }
 
 .header {
@@ -11,7 +11,7 @@ body {
 }
 
 .container-fluid {
-    padding: 0 10px; /* Add padding to the container-fluid */
+    padding: 0 10px;
 }
 
 .content {
@@ -19,7 +19,7 @@ body {
     padding: 20px;
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    margin-bottom: 20px; /* Add margin for spacing between sections */
+    margin-bottom: 20px;
 }
 
 .form-section {
